--- a/tracks/web/finance/templates/register.html
+++ b/tracks/web/finance/templates/register.html
@@ -7,13 +7,13 @@
 {% block main %}
     <form action="/register" method="post">
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" required>
         </div>
         <div class="form-group">
-            <input class="form-control" name="password" placeholder="Password" type="password">
+            <input class="form-control" name="password" placeholder="Password" type="password" required>
         </div>
         <div class="form-group">
-            <input class="form-control" name="confirmation" placeholder="Password (confirm)" type="password">
+            <input class="form-control" name="confirmation" placeholder="Password (confirm)" type="password" required>
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
