--- a/tracks/web/finance/templates/layout.html
+++ b/tracks/web/finance/templates/layout.html
@@ -62,10 +62,14 @@
         <main class="container p-5">
             {% block main %}{% endblock %}
         </main>
-        
+
         <footer class="small text-center text-muted">
             Data provided for free by <a href="https://iextrading.com/developer">IEX</a>. View <a href="https://iextrading.com/api-exhibit-a/">IEX’s Terms of Use</a>.
         </footer>
+
+        <script type="text/javascript">
+            {% block javascript %}{% endblock %}
+        </script>
 
     </body>
 
