--- a/tracks/web/finance/templates/profile.html
+++ b/tracks/web/finance/templates/profile.html
@@ -10,13 +10,13 @@
             <h3>{{ user["username"] }}</h3>
         </div>
         <div class="form-group">
-            <input class="form-control" name="curr_password" placeholder="Current Password" type="password">
+            <input class="form-control" name="curr_password" placeholder="Current Password" type="password" required>
         </div>
         <div class="form-group">
-            <input class="form-control" name="new_password" placeholder="New Password" type="password">
+            <input class="form-control" name="new_password" placeholder="New Password" type="password" required>
         </div>
         <div class="form-group">
-            <input class="form-control" name="new_confirmation" placeholder="New Password (confirm)" type="password">
+            <input class="form-control" name="new_confirmation" placeholder="New Password (confirm)" type="password" required>
         </div>
         <button class="btn btn-primary" type="submit">Update Password</button>
     </form>
