Add manage stocks (buy and sell) functionality to portfolio page using Bootstrap Modal

--- a/tracks/web/finance/static/styles.css
+++ b/tracks/web/finance/static/styles.css
@@ -26,6 +26,7 @@ main .form-control
 {
     /* center form controls */
     display: inline-block;
+    vertical-align: middle;
 
     /* override Bootstrap's 100% width for form controls */
     width: auto;
